@@ -1,0 +1,3 @@
+#!/usr/bin/perl
+use Code::TidyAll::t::Plugin::PHPCodeSniffer;
+Code::TidyAll::t::Plugin::PHPCodeSniffer->runtests;
